Fix problems with using 'nolock' option with mount.cifs.

BUG: 463637